Faculty get by id backend and frontend done

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,17 +38,17 @@
          
       </div>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand"/><a th:href="@{/index.html}"><img class="logo" th:src="@{/images/logo.png}"></a>
+            <a class="navbar-brand"/><a th:href="@{'/faculty'}"><img class="logo" th:src="@{/images/logo.png}"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                <ul class="navbar-nav mr-auto">
                   <li class="nav-item active">
-                     <a class="nav-link" th:href="@{/index.html}">Home</a>
+                     <a class="nav-link" th:href="@{'/faculty'}">Home</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" th:href="@{about.html}">About</a>
+                     <a class="nav-link" th:href="@{'/faculty'}">About</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" th:href="@{/contact.html}">Contact Us</a>
@@ -181,7 +181,7 @@
          <div class="container">
             <div class="row">
                <div class="col-sm-12">
-                  <h1 class="mission_taital">Mission causes</h1>
+                  <h1 class="mission_taital">Bizning talabalar</h1>
                   <p class="mission_text">going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. </p>
                </div>
             </div>
@@ -276,7 +276,7 @@
                </div>
                <div class="col-md-5">
                   <div class="container_main">
-                     <img th:src="@{/images/amalyot4.png}" alt="Avatar" class="image">
+                     <img th:src="@{/images/amalyot4.jpg}" alt="Avatar" class="image">
                      <div class="overlay">
                         <div class="text">
                            <h4 class="some_text">whichalteration in some </h4>
