--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
    <head>
       <!-- basic -->
       <meta charset="utf-8">
@@ -14,57 +14,44 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- bootstrap css -->
-      <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
+      <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}">
       <!-- style css -->
-      <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+      <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
       <!-- Responsive-->
-      <link rel="stylesheet" href="../static/css/responsive.css">
+      <link rel="stylesheet" th:href="@{/css/responsive.css}">
       <!-- fevicon -->
-      <link rel="icon" href="../../../static/images/fevicon.png" type="image/gif" />
+      <link rel="icon" th:href="@{/images/fevicon.png}" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="../static/css/jquery.mCustomScrollbar.min.css">
+      <link rel="stylesheet" th:href="@{/css/jquery.mCustomScrollbar.min.css}">
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <!-- fonts -->
       <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700&display=swap" rel="stylesheet">
       <!-- owl stylesheets --> 
-      <link rel="stylesheet" href="../static/css/owl.carousel.min.css">
-      <link rel="stylesheet" href="../../../static/css/owl.theme.default.min.css">
+      <link rel="stylesheet" th:href="@{/css/owl.carousel.min.css}">
+      <link rel="stylesheet" th:href="@{/css/owl.theme.default.min.css}">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
    </head>
    <body>
       <!-- header section start -->
       <div class="header_section">
          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand"><a href="index.html"><img src="../static/images/logo.png"></a>
+            <a class="navbar-brand"><a th:href="@{'/faculty'}"><img class="logo" th:src="@{/images/logo.png}"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                <ul class="navbar-nav mr-auto">
                   <li class="nav-item active">
-                     <a class="nav-link" href="index.html">Home</a>
+                     <a class="nav-link" th:href="@{'/faculty'}">Facultet azolari</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="about.html">About</a>
+                     <a class="nav-link" th:href="@{/about.html}">Foydali Manbalar</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="donate.html">Donate</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="news.html">News</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="contact.html">Contact Us</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="mission.html">Our Mission</a>
+                     <a class="nav-link" th:href="@{/donate.html}">Mualiflar</a>
                   </li>
                </ul>
-               <form class="form-inline my-2 my-lg-0">
-                  <div class="search_icon"><a href="#"><img src="../static/images/search-icon.png"></a></div>
-                  <button class="donate_btn" type="submit">Donate Now</button>
-               </form>
             </div>
          </nav>
       </div>
@@ -83,7 +70,7 @@
                   <div class="readmore_bt"><a href="#">Read more</a></div>
                </div>
                <div class="col-sm-4">
-                  <div class="about_img"><img src="../static/images/about-img.png"></div>
+                  <div class="about_img"><img th:if="${get_faculty.getId() != null}" th:src="'data:image/jpg;base64, '+${get_faculty.getBase64()}"></div>
                </div>
             </div>
          </div>
@@ -93,8 +80,8 @@
       <div class="footer_section layout_padding">
          <div class="container">
             <div class="row">
-               <div class="col-sm-6 col-md-6 col-lg-3">
-                  <div class="footer_logo"><img src="../static/images/footer-logo.png"></div>
+               <div class="col-sm-6 col-md-6 col-lg-3" >
+                  <div class="footer_logo"><img class="logo" th:src="@{/images/logo.png}"></div>
                </div>
                <div class="col-sm-6 col-md-6 col-lg-3">
                   <h4 class="footer_taital">NAVIGATION</h4>
@@ -137,10 +124,10 @@
                   <div class="col-sm-4 col-md-4 col-lg-3">
                      <div class="social_icon">
                         <ul>
-                           <li><a href="#"><img src="../static/images/fb-icon.png"></a></li>
-                           <li><a href="#"><img src="../static/images/twitter-icon.png"></a></li>
-                           <li><a href="#"><img src="../static/images/linkedin-icon.png"></a></li>
-                           <li><a href="#"><img src="../static/images/instagram-icon.png"></a></li>
+                           <li><a href="#"><img th:src="@{/images/fb-icon.png}"></a></li>
+                           <li><a href="#"><img th:src="@{/images/twitter-icon.png}"></a></li>
+                           <li><a href="#"><img th:src="@{/images/linkedin-icon.png}"></a></li>
+                           <li><a href="#"><img th:src="@{/images/instagram-icon.png}"></a></li>
                         </ul>
                      </div>
                   </div>
@@ -161,16 +148,16 @@
       </div>
       <!-- copyright section end -->
       <!-- Javascript files-->
-      <script src="../static/js/jquery.min.js"></script>
-      <script src="../static/js/popper.min.js"></script>
-      <script src="../static/js/bootstrap.bundle.min.js"></script>
-      <script src="../static/js/jquery-3.0.0.min.js"></script>
-      <script src="../static/js/plugin.js"></script>
+      <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
+      <script type="text/javascript" th:src="@{/js/popper.min.js}"></script>
+      <script type="text/javascript" th:src="@{/js/bootstrap.bundle.min.js}"></script>
+      <script type="text/javascript" th:src="@{/js/jquery-3.0.0.min.js}"></script>
+      <script type="text/javascript" th:src="@{/js/plugin.js}"></script>
       <!-- sidebar -->
-      <script src="../static/js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="../static/js/custom.js"></script>
+      <script type="text/javascript" th:src="@{/js/jquery.mCustomScrollbar.concat.min.js}"></script>
+      <script type="text/javascript" th:src="@{/js/custom.js}"></script>
       <!-- javascript --> 
-      <script src="../../../static/js/owl.carousel.js"></script>
+      <script type="text/javascript" th:src="@{/js/owl.carousel.js}"></script>
       <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>    
    </body>
 </html>
