--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -136,7 +136,6 @@
          <div class="fundraise_section">
             <div class="fundraise_section_main">
                <div class="row">
-
                   <div class="col-lg-4" th:each="faculty : ${faculties}">
                      <div class="box_main">
                         <div class="icon_1">
@@ -153,8 +152,7 @@
                </div>
             </div>
          </div>
-      </div>
-      </div>
+
       <!-- banner section end -->
       <!-- about section start -->
       <div class="about_section layout_padding">
@@ -189,104 +187,61 @@
          <div class="mission_section_2">
             <div class="row">
                <div class="offset-md-2"></div>
+
                <div class="col-md-5">
                   <div class="container_main">
                      <img th:src="@{/images/amalyot4.jpg}" alt="Avatar" class="image">
-                     <div class="overlay">
-                        <div class="text">
-                           <h4 class="some_text">whichalteration in some </h4>
-                           <p class="alteration_text">Alteration in some form, by injected humour, or randomised words whichalteration in some form, by injected humour, or randomised words which</p>
-                           <div class="btn_main">
-                              <div class="donate_bt"><a href="#">Read More</a></div>
-                              <div class="donate_bt"><a th:href="@{/donate.html}">Donate Now</a></div>
-                           </div>
-                        </div>
-                     </div>
                   </div>
                </div>
+
                <div class="col-md-5">
                   <div class="container_main">
                      <img th:src="@{/images/amalyot8.png}" alt="Avatar" class="image">
-                     <div class="overlay">
-                        <div class="text">
-                           <h4 class="some_text">whichalteration in some </h4>
-                           <p class="alteration_text">Alteration in some form, by injected humour, or randomised words whichalteration in some form, by injected humour, or randomised words which</p>
-                           <div class="btn_main">
-                              <div class="donate_bt"><a href="#">Read More</a></div>
-                              <div class="donate_bt"><a th:href="@{/donate.html}">Donate Now</a></div>
-                           </div>
-                        </div>
-                     </div>
                   </div>
                </div>
+
             </div>
          </div>
+
          <div class="mission_section_2">
             <div class="row">
                <div class="col-md-5">
                   <div class="container_main">
                      <img th:src="@{/images/amalyot5.png}" alt="Avatar" class="image">
-                     <div class="overlay">
-                        <div class="text">
-                           <h4 class="some_text">whichalteration in some </h4>
-                           <p class="alteration_text">Alteration in some form, by injected humour, or randomised words whichalteration in some form, by injected humour, or randomised words which</p>
-                           <div class="btn_main">
-                              <div class="donate_bt"><a href="#">Read More</a></div>
-                              <div class="donate_bt"><a th:href="@{/donate.html}">Donate Now</a></div>
-                           </div>
-                        </div>
-                     </div>
                   </div>
                </div>
+
                <div class="col-md-5">
                   <div class="container_main">
                      <img th:src="@{/images/amalyot6.png}" alt="Avatar" class="image">
-                     <div class="overlay">
-                        <div class="text">
-                           <h4 class="some_text">whichalteration in some </h4>
-                           <p class="alteration_text">Alteration in some form, by injected humour, or randomised words whichalteration in some form, by injected humour, or randomised words which</p>
-                           <div class="btn_main">
-                              <div class="donate_bt"><a href="#">Read More</a></div>
-                              <div class="donate_bt"><a th:href="@{/donate.html}">Donate Now</a></div>
-                           </div>
-                        </div>
-                     </div>
+<!--                     <div class="overlay">-->
+<!--                        <div class="text">-->
+<!--                           <h4 class="some_text">whichalteration in some </h4>-->
+<!--                           <p class="alteration_text">Alteration in some form, by injected humour, or randomised words whichalteration in some form, by injected humour, or randomised words which</p>-->
+<!--                           <div class="btn_main">-->
+<!--                              <div class="donate_bt"><a href="#">Read More</a></div>-->
+<!--                              <div class="donate_bt"><a th:href="@{/donate.html}">Donate Now</a></div>-->
+<!--                           </div>-->
+<!--                        </div>-->
+<!--                     </div>-->
                   </div>
                </div>
                <div class="offset-md-2"></div>
             </div>
          </div>
+
+
          <div class="mission_section_2">
             <div class="row">
                <div class="offset-md-2"></div>
                <div class="col-md-5">
                   <div class="container_main">
                      <img th:src="@{/images/amalyot7.png}" alt="Avatar" class="image">
-                     <div class="overlay">
-                        <div class="text">
-                           <h4 class="some_text">whichalteration in some </h4>
-                           <p class="alteration_text">Alteration in some form, by injected humour, or randomised words whichalteration in some form, by injected humour, or randomised words which</p>
-                           <div class="btn_main">
-                              <div class="donate_bt"><a href="#">Read More</a></div>
-                              <div class="donate_bt"><a th:href="@{/donate.html}">Donate Now</a></div>
-                           </div>
-                        </div>
-                     </div>
                   </div>
                </div>
                <div class="col-md-5">
                   <div class="container_main">
                      <img th:src="@{/images/amalyot4.jpg}" alt="Avatar" class="image">
-                     <div class="overlay">
-                        <div class="text">
-                           <h4 class="some_text">whichalteration in some </h4>
-                           <p class="alteration_text">Alteration in some form, by injected humour, or randomised words whichalteration in some form, by injected humour, or randomised words which</p>
-                           <div class="btn_main">
-                              <div class="donate_bt"><a href="#">Read More</a></div>
-                              <div class="donate_bt"><a th:href="@{/donate.html}">Donate Now</a></div>
-                           </div>
-                        </div>
-                     </div>
                   </div>
                </div>
             </div>
